optimized floating breadcrumb (prevent title from jumping when element is position fixed

--- a/Resources/Private/SASS/phlu.scss
+++ b/Resources/Private/SASS/phlu.scss
@@ -2616,6 +2616,7 @@ body {
     }
     .fix-navbar {
       position: fixed;
+      top:0;
       width: 100%;
       @include fixed-breadcrumb-shadow(0.25);
       .navbar-brand {
