--- a/Resources/Public/Styles/phlu-all.css
+++ b/Resources/Public/Styles/phlu-all.css
@@ -9905,6 +9905,7 @@ body {
           background-color: transparent; } }
     body .all .fix-navbar {
       position: fixed;
+      top: 0;
       width: 100%;
       -webkit-box-shadow: 3px 17px 33px -13px rgba(0, 0, 0, 0.25);
       -moz-box-shadow: 3px 17px 33px -13px rgba(0, 0, 0, 0.25);
